[package]
name = "cryptex-sol-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cryptex_sol_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
solana-program = "1.9.4"
jet-proto-v1-cpi = { git = "https://github.com/fluidity-money/jet-v1", branch = "master" }
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = {version = "3", features = ["no-entrypoint"]}
solana-client = "1.9.29"