[package]
name = "jet-margin-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_margin_pool"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = ["jet-margin/testing", "jet-metadata/testing"]
cli = ["no-entrypoint", "serde"]

[dependencies]
bytemuck = "1.7"
static_assertions = "1.1"
bitflags = "1.3"
serde = { version = "1.0", optional = true }

anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "master" }

pyth-sdk-solana = "0.4"

jet-proto-math = { git = "https://github.com/jet-lab/program-libraries", branch = "main" }
jet-margin = { path = "../jet-v2-margin", features = ["cpi"] }
jet-metadata = { path = "../jet-v2-metadata", features = ["cpi"] }

[dev-dependencies]
serde = "1.0"
serde_test = "1.0"
