[package]
name = "jet-metadata"
version = "0.1.0"
description = "Program to map arbitrary data to accounts"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_metadata"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
solana-program = "1.9"
